<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#817373"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/tvEtiquetaSeleccionCaracteristica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/partida_seleccion_caracteristica"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/rgCaracteristicas"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/rbMotor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/carta_etiqueta_motor"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbCilindros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/carta_etiqueta_cilindros"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbPotencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/carta_etiqueta_potencia"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbRPM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/carta_etiqueta_rpm"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbVelocidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/carta_etiqueta_velocidad"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbConsumo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/carta_etiqueta_consumo"
            android:textSize="24sp" />
    </RadioGroup>
</LinearLayout>