<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEtiquetaSaludo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_saludo"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvNick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvEtiquetaRanking"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="bottom|center_horizontal"
        android:text="@string/main_ver_ranking"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2" />

    <Button
        android:id="@+id/bNuevaPartida"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="5"
        android:text="@string/main_crear_partida" />

</LinearLayout>