<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/fondo"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llCaracteristica"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEtiquetaCaracteristica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carta_caracteristica"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvCaracteristica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="adg"
                android:textColor="#FF0000"
                android:textSize="32dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEtiquetaMano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/partida_mano"
                android:textSize="36sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvMano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCarta"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.8"
        android:background="@drawable/borde_cartas"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMarca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvModelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="24sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivFotoCarta"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEtiquetaMotor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:text="@string/carta_etiqueta_motor"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvMotor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:textSize="18sp"
                tools:text="@string/valor_carta_default" />

            <TextView
                android:id="@+id/tvUnidadMotor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/carta_unidad_motor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEtiquetaCilindros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:text="@string/carta_etiqueta_cilindros"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvCilindros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:textSize="18sp"
                tools:text="@string/valor_carta_default" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEtiquetaPotencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:text="@string/carta_etiqueta_potencia"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvPotencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:textSize="18sp"
                tools:text="@string/valor_carta_default" />

            <TextView
                android:id="@+id/tvUnidadPotencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/carta_unidad_potencia" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEtiquetaRPM"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:text="@string/carta_etiqueta_rpm"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvRPM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:textSize="18sp"
                tools:text="@string/valor_carta_default" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEtiquetaVelocidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:text="@string/carta_etiqueta_velocidad"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvVelocidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:textSize="18sp"
                tools:text="@string/valor_carta_default" />

            <TextView
                android:id="@+id/tvUnidadVelocidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/carta_unidad_velocidad" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEtiquetaConsumo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:text="@string/carta_etiqueta_consumo"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvConsumo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:textSize="18sp"
                tools:text="@string/valor_carta_default" />

            <TextView
                android:id="@+id/tvUnidadConsumo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/carta_unidad_consumo" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="3">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>