<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llTodo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borde_cartas"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMarca2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvModelo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivFotoCarta2"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            app:srcCompat="@drawable/mclaren" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEtiquetaMotor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/carta_etiqueta_motor"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvMotor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvUnidadMotor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="2dp"
                android:text="@string/carta_unidad_motor"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEtiquetaCilindros2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/carta_etiqueta_cilindros"
                android:textSize="10sp"
                android:textStyle="italic"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tvCilindros2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEtiquetaPotencia2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/carta_etiqueta_potencia"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvPotencia2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvUnidadPotencia2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="2dp"
                android:text="@string/carta_unidad_potencia"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEtiquetaRPM2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:text="@string/carta_etiqueta_rpm"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvRPM2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEtiquetaVelocidad2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/carta_etiqueta_velocidad"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvVelocidad2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvUnidadVelocidad2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="2dp"
                android:text="@string/carta_unidad_velocidad"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEtiquetaConsumo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/carta_etiqueta_consumo"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvConsumo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvUnidadConsumo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="2dp"
                android:text="@string/carta_unidad_consumo"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>